--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
 						<span class="image"><img src="images/Portfolio Grid_home page/Mr Buttons_cropped_1200x800.jpg" alt="Mr. Buttons the crow flying with a button in his talon and palm trees in the background" /></span>
 						<div class="content">
 							<h2>Mr. Buttons</h2>
-							<p>When a smarmy crow falls in love with a duck-shaped hot tub chlorinator, things don't go as planned. This comic was published in my zine <a href="https://shop.sheriroloff.com/products/everything-ness-zine-volume-1" target="_blank" rel="noopener noreferrer">"Everything-ness"</a> which is available in my store. </p>
+							<p>When a smarmy crow falls in love with a duck-shaped hot tub chlorinator, things don't go as planned. This comic was published in my zine <a href="https://sheriroloff.myshopify.com/products/everything-ness-zine-volume-1" target="_blank" rel="noopener noreferrer">"Everything-ness"</a> which is available in my store. </p>
 							<ul class="actions">
 								<li>
 									<a href="mr-buttons.html" class="button alt">Read the comic</a>
@@ -74,7 +74,7 @@
 						<span class="image"><img src="images/Portfolio Grid_home page/Lucy & Maverick_1200x800.jpg" alt="A little girl and a gray cat sitting at the end of a pier looking over The Magic Lake" /></span>
 						<div class="content">
 							<h2>The Magic Lake</h2>
-							<p>A lazy summer day has the unexpected in store for Lucy and her adventure cat Maverick. This comic is in my zine <a href="https://shop.sheriroloff.com/products/everything-ness-zine-volume-1" target="_blank" rel="noopener noreferrer">"Everything-ness"</a> available in my store. </p>
+							<p>A lazy summer day has the unexpected in store for Lucy and her adventure cat Maverick. This comic is in my zine <a href="https://sheriroloff.myshopify.com/products/everything-ness-zine-volume-1" target="_blank" rel="noopener noreferrer">"Everything-ness"</a> available in my store. </p>
 							<ul class="actions">
 								<li>
 									<a href="magic-lake.html" class="button alt">Read the comic</a>
